--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Новый тайтл</title>
+    <p>Какой-то текст ыыыы</p>
 </head>
 <body>
     <h1>Главная страница</h1>
