--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Новый тайтл</title>
-    <p>Какой-то текст еще еще еще и еще и еще и еще</p>
 </head>
 <body>
     <h1>Главная страница</h1>
+    <p>Какой-то текст еще еще еще и еще и еще и еще</p>
+    <a href ="pages/about.html">
+        Перейти на эту страницу
+    </a>
 </body>
 </html>
