--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Главная страница</h1>
     <p>Какой-то текст еще еще еще и еще и еще и еще</p>
     <a href ="pages/about.html">
-        Перейти на эту страницу
+        Перейти на главную страницу
     </a>
 </body>
 </html>
