--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Новый тайтл</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-    <h1>Главная страница</h1>
-    <p>Какой-то текст еще еще еще и еще и еще и еще</p>
-    <a href ="pages/about.html">
-        Перейти на эту страницу "О курсе"
-    </a>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+        <title>Новый тайтл</title>
+        <link href="css/styles.css" rel="stylesheet">
+    </head>
+    <body>
+        <h1>Главная страница</h1>
+        <p>
+            Какой-то текст еще еще еще и еще и еще и еще
+        </p>
+        <a href ="pages/about.html">
+            Перейти на эту страницу "О курсе"
+        </a>
+    </body>
 </html>
+ 
