--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1 class="title">Главная страница</h1>
-        <p>
+        <p class="description">
             Какой-то текст еще еще еще и еще и еще и еще
         </p>
         <a href ="pages/about.html">
