--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <h1 class="title">Главная страница</h1>
+        <h1>Это заголовок первого уровня</h1>
         <p class="description">
             Какой-то текст еще еще еще и еще и еще и еще
         </p>
