added new same h1

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <h1 class="title">Главная страница</h1>
+        <h1>Еще одна лавная страница</h1>
         <p class="description">
             Какой-то текст еще еще еще и еще и еще и еще
         </p>
