--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="css/styles.css" rel="stylesheet">
     </head>
     <body class="site-body">
-        <h1 class="title">Главная страница</h1>
+        <h1>Главная страница</h1>
         <h1>Еще одна лавная страница</h1>
         <p class="description">
             Какой-то текст еще еще еще и еще и еще и еще
