feat: added header element

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
         <link href="css/styles.css" rel="stylesheet">
     </head>
     <body class="site-body">
-        <h1>Главная страница</h1>
-        <h1>Еще одна лавная страница</h1>
+        <header class="site-header">
+            <h1>Главная страница</h1>
+            <h1>Еще одна лавная страница</h1>
+        </header>
         <main class="site-main">
             <p class="description">
                 Какой-то текст еще еще еще и еще и еще и еще
