--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <body class="site-body">
         <h1>Главная страница</h1>
         <h1>Еще одна лавная страница</h1>
-        <p class="description">
-            Какой-то текст еще еще еще и еще и еще и еще
-        </p>
-        <a href ="pages/about.html">
-            Перейти на эту страницу "О курсе"
-        </a>
+        <main class="site-main">
+            <p class="description">
+                Какой-то текст еще еще еще и еще и еще и еще
+            </p>
+            <a href ="pages/about.html">
+                Перейти на эту страницу "О курсе"
+            </a>
+        </main>
     </body>
 </html>
  
