feat: added another p description

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <p class="description">
                 Какой-то текст еще еще еще и еще и еще и еще
             </p>
+            <p class="description">
+                Еще один дескрипшн
+            </p>
             <a href ="pages/about.html">
                 Перейти на эту страницу "О курсе"
             </a>
