feat: added h1 class

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body class="site-body">
         <header class="site-header">
-            <h1>Главная страница</h1>
+            <h1 class="heading">Главная страница</h1>
         </header>
         <main class="site-main">
             <p class="description">
