--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <body class="site-body">
         <header class="site-header">
             <h1 class="heading">Главная страница</h1>
+            <ul>
+                <li>Первый элемент списка</li>
+            </ul>
         </header>
         <main class="site-main">
             <p class="description">
