Added new li el

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <h1 class="heading">Главная страница</h1>
             <ul>
                 <li>Первый элемент списка</li>
+                <li>Второй элемент списка</li>
             </ul>
         </header>
         <main class="site-main">
